New Conversation v2 - Fix find by username/phone options disappearing after rotation.