@@ -20,7 +20,6 @@ package org.thoughtcrime.securesms;
 import android.Manifest;
 import android.annotation.SuppressLint;
 import android.content.Context;
-import android.content.Intent;
 import android.graphics.Rect;
 import android.os.AsyncTask;
 import android.os.Bundle;
@@ -66,6 +65,7 @@ import org.thoughtcrime.securesms.contacts.paged.ContactSearchKey;
 import org.thoughtcrime.securesms.contacts.paged.ContactSearchMediator;
 import org.thoughtcrime.securesms.contacts.paged.ContactSearchSortOrder;
 import org.thoughtcrime.securesms.contacts.paged.ContactSearchState;
+import org.thoughtcrime.securesms.contacts.selection.ContactSelectionArguments;
 import org.thoughtcrime.securesms.contacts.sync.ContactDiscovery;
 import org.thoughtcrime.securesms.database.RecipientTable;
 import org.thoughtcrime.securesms.groups.SelectionLimits;
@@ -86,7 +86,6 @@ import org.thoughtcrime.securesms.util.views.SimpleProgressDialog;
 
 import java.io.IOException;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -97,7 +96,7 @@ import io.reactivex.rxjava3.disposables.Disposable;
 import kotlin.Unit;
 
 /**
- * Fragment for selecting a one or more contacts from a list.
+ * Fragment for selecting one or more contacts from a list.
  *
  * @author Moxie Marlinspike
  */
@@ -110,17 +109,7 @@ public final class ContactSelectionListFragment extends LoggingFragment {
 
   public static final int NO_LIMIT = Integer.MAX_VALUE;
 
-  public static final String DISPLAY_MODE       = "display_mode";
-  public static final String REFRESHABLE        = "refreshable";
-  public static final String RECENTS            = "recents";
-  public static final String SELECTION_LIMITS   = "selection_limits";
-  public static final String CURRENT_SELECTION  = "current_selection";
-  public static final String HIDE_COUNT         = "hide_count";
-  public static final String CAN_SELECT_SELF    = "can_select_self";
-  public static final String DISPLAY_CHIPS      = "display_chips";
-  public static final String RV_PADDING_BOTTOM  = "recycler_view_padding_bottom";
-  public static final String RV_CLIP            = "recycler_view_clipping";
-  public static final String INCLUDE_CHAT_TYPES = "include_chat_types";
+  private ContactSelectionArguments fragmentArgs;
 
   private ConstraintLayout                constraintLayout;
   private TextView                        emptyText;
@@ -161,7 +150,7 @@ public final class ContactSelectionListFragment extends LoggingFragment {
     }
 
     if (context instanceof FindByCallback) {
-      showFindByUsernameAndPhoneOptions((FindByCallback) context);
+      setFindByCallback((FindByCallback) context);
     }
 
     if (context instanceof NewCallCallback) {
@@ -209,7 +198,7 @@ public final class ContactSelectionListFragment extends LoggingFragment {
     }
   }
 
-  public void showFindByUsernameAndPhoneOptions(@Nullable FindByCallback callback) {
+  public void setFindByCallback(@Nullable FindByCallback callback) {
     this.findByCallback = callback;
   }
 
@@ -275,28 +264,20 @@ public final class ContactSelectionListFragment extends LoggingFragment {
 
     lifecycleDisposable.add(disposable);
 
-    Intent intent    = requireActivity().getIntent();
-    Bundle arguments = safeArguments();
+    fragmentArgs = ContactSelectionArguments.fromBundle(safeArguments(), requireActivity().getIntent());
 
-    int     recyclerViewPadBottom = arguments.getInt(RV_PADDING_BOTTOM, intent.getIntExtra(RV_PADDING_BOTTOM, -1));
-    boolean recyclerViewClipping  = arguments.getBoolean(RV_CLIP, intent.getBooleanExtra(RV_CLIP, true));
-
-    if (recyclerViewPadBottom != -1) {
-      ViewUtil.setPaddingBottom(recyclerView, recyclerViewPadBottom);
+    if (fragmentArgs.getRecyclerPadBottom() != -1) {
+      ViewUtil.setPaddingBottom(recyclerView, fragmentArgs.getRecyclerPadBottom());
     }
 
-    recyclerView.setClipToPadding(recyclerViewClipping);
+    recyclerView.setClipToPadding(fragmentArgs.getRecyclerChildClipping());
 
-    boolean isRefreshable = arguments.getBoolean(REFRESHABLE, intent.getBooleanExtra(REFRESHABLE, true));
-    swipeRefresh.setNestedScrollingEnabled(isRefreshable);
-    swipeRefresh.setEnabled(isRefreshable);
+    swipeRefresh.setNestedScrollingEnabled(fragmentArgs.isRefreshable());
+    swipeRefresh.setEnabled(fragmentArgs.isRefreshable());
 
-    selectionLimit = arguments.getParcelable(SELECTION_LIMITS);
-    if (selectionLimit == null) {
-      selectionLimit = intent.getParcelableExtra(SELECTION_LIMITS);
-    }
-    isMulti       = selectionLimit != null;
-    canSelectSelf = arguments.getBoolean(CAN_SELECT_SELF, intent.getBooleanExtra(CAN_SELECT_SELF, !isMulti));
+    selectionLimit = fragmentArgs.getSelectionLimits();
+    isMulti        = selectionLimit != null;
+    canSelectSelf  = fragmentArgs.getCanSelectSelf();
 
     if (!isMulti) {
       selectionLimit = SelectionLimits.NO_LIMITS;
@@ -494,13 +475,7 @@ public final class ContactSelectionListFragment extends LoggingFragment {
   }
 
   private Set<RecipientId> getCurrentSelection() {
-    List<RecipientId> currentSelection = safeArguments().getParcelableArrayList(CURRENT_SELECTION);
-    if (currentSelection == null) {
-      currentSelection = requireActivity().getIntent().getParcelableArrayListExtra(CURRENT_SELECTION);
-    }
-
-    return currentSelection == null ? Collections.emptySet()
-                                    : Collections.unmodifiableSet(new HashSet<>(currentSelection));
+    return Set.copyOf(fragmentArgs.getCurrentSelection());
   }
 
   public boolean isMulti() {
@@ -617,7 +592,7 @@ public final class ContactSelectionListFragment extends LoggingFragment {
   }
 
   private boolean shouldDisplayRecents() {
-    return safeArguments().getBoolean(RECENTS, requireActivity().getIntent().getBooleanExtra(RECENTS, false));
+    return fragmentArgs.getIncludeRecents();
   }
 
   @SuppressLint("StaticFieldLeak")
@@ -869,7 +844,7 @@ public final class ContactSelectionListFragment extends LoggingFragment {
   }
 
   private void setChipGroupVisibility(int visibility) {
-    if (!safeArguments().getBoolean(DISPLAY_CHIPS, requireActivity().getIntent().getBooleanExtra(DISPLAY_CHIPS, true))) {
+    if (!fragmentArgs.getDisplayChips()) {
       return;
     }
 
@@ -896,9 +871,9 @@ public final class ContactSelectionListFragment extends LoggingFragment {
   }
 
   private @NonNull ContactSearchConfiguration mapStateToConfiguration(@NonNull ContactSearchState contactSearchState) {
-    int displayMode = safeArguments().getInt(DISPLAY_MODE, requireActivity().getIntent().getIntExtra(DISPLAY_MODE, ContactSelectionDisplayMode.FLAG_ALL));
+    int displayMode = fragmentArgs.getDisplayMode();
 
-    boolean includeRecents             = safeArguments().getBoolean(RECENTS, requireActivity().getIntent().getBooleanExtra(RECENTS, false));
+    boolean includeRecents             = fragmentArgs.getIncludeRecents();
     boolean includePushContacts        = flagSet(displayMode, ContactSelectionDisplayMode.FLAG_PUSH);
     boolean includeSmsContacts         = flagSet(displayMode, ContactSelectionDisplayMode.FLAG_SMS);
     boolean includeActiveGroups        = flagSet(displayMode, ContactSelectionDisplayMode.FLAG_ACTIVE_GROUPS);
@@ -910,7 +885,7 @@ public final class ContactSelectionListFragment extends LoggingFragment {
     boolean includeGroupsAfterContacts = flagSet(displayMode, ContactSelectionDisplayMode.FLAG_GROUPS_AFTER_CONTACTS);
     boolean blocked                    = flagSet(displayMode, ContactSelectionDisplayMode.FLAG_BLOCK);
     boolean includeGroupMembers        = flagSet(displayMode, ContactSelectionDisplayMode.FLAG_GROUP_MEMBERS);
-    boolean includeChatTypes           = safeArguments().getBoolean(INCLUDE_CHAT_TYPES);
+    boolean includeChatTypes           = fragmentArgs.getIncludeChatTypes();
     boolean hasQuery                   = !TextUtils.isEmpty(contactSearchState.getQuery());
 
     ContactSearchConfiguration.TransportType        transportType = resolveTransportType(includePushContacts, includeSmsContacts);
@@ -932,8 +907,11 @@ public final class ContactSelectionListFragment extends LoggingFragment {
         builder.arbitrary(ContactSelectionListAdapter.ArbitraryRepository.ArbitraryRow.NEW_GROUP.getCode());
       }
 
-      if (findByCallback != null && !hasQuery) {
+      if (fragmentArgs.getEnableFindByUsername() && !hasQuery) {
         builder.arbitrary(ContactSelectionListAdapter.ArbitraryRepository.ArbitraryRow.FIND_BY_USERNAME.getCode());
+      }
+
+      if (fragmentArgs.getEnableFindByPhoneNumber() && !hasQuery) {
         builder.arbitrary(ContactSelectionListAdapter.ArbitraryRepository.ArbitraryRow.FIND_BY_PHONE_NUMBER.getCode());
       }
 
